--- a/app/templates/play/attrib.html
+++ b/app/templates/play/attrib.html
@@ -33,7 +33,7 @@
     <div class="entity-at">
     Attribute of
     {% if subject.typename() == 'char' %}
-        {% set link = url_for('play_char', char_id=subject.id) %}
+        {% set link = url_for('play_character', char_id=subject.id) %}
         {% set letter = link_letters.next(link) %}
         <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
         <span class="hotkey-indicator">{{ letter }}</span>
