--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -55,7 +55,7 @@
                         General Storage
                         {% if params.char_id %}
                             (with
-                            {% set link = url_for('play_char', char_id=params.char_id) %}
+                            {% set link = url_for('play_character', char_id=params.char_id) %}
                             {% set letter = link_letters.next(link) %}
                             <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
                             <span class="hotkey-indicator">{{ letter }}</span>
@@ -72,7 +72,7 @@
                             {% endif %}
                         {% endif %}
                     {% elif current.pile.container_type() == 'char' %}
-                        {% set link = url_for('play_char', char_id=container.id) %}
+                        {% set link = url_for('play_character', char_id=container.id) %}
                         {% set letter = link_letters.next(link) %}
                         <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
                         Carried by
@@ -103,7 +103,7 @@
                         {% endif %}
                         {% if params.char_id %}
                             where
-                            {% set link = url_for('play_char', char_id=params.char_id) %}
+                            {% set link = url_for('play_character', char_id=params.char_id) %}
                             {% set letter = link_letters.next(link) %}
                             <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
                             <span class="hotkey-indicator">{{ letter }}</span>
@@ -386,7 +386,7 @@
                                                                 (General)
                                                             {% else %}
                                                                 {% if source.pile.container_type() == 'char' %}
-                                                                    {% set link = url_for('play_char', char_id=container.id) %}
+                                                                    {% set link = url_for('play_character', char_id=container.id) %}
                                                                 {% elif source.pile.container_type() == 'loc' %}
                                                                     {% set link = url_for('play_location', loc_id=container.id) %}
                                                                 {% else %}
@@ -428,7 +428,7 @@
                                                         {% endif %}
                                                     </td>
                                                     {% if subject.__class__.__name__ == 'Character' %}
-                                                        {% set link = url_for('play_char', char_id=subject.id) %}
+                                                        {% set link = url_for('play_character', char_id=subject.id) %}
                                                     {% elif subject.__class__.__name__ == 'Item' %}
                                                         {% set link = url_for('play_item', item_id=subject.id) %}
                                                     {% else %}
@@ -855,7 +855,7 @@
                     method: 'post',
                     success: (response) => {
                         if (response.status === 'success') {
-                            const url = "{{ url_for('play_char', char_id=container.id) }}";
+                            const url = "{{ url_for('play_character', char_id=container.id) }}";
                             window.location.href = url;
                         } else {
                             console.error(response.message);
@@ -911,7 +911,7 @@
                     method: 'post',
                     success: (response) => {
                         if (response.status === 'success') {
-                            const url = "{{ url_for('play_char', char_id=container.id) }}";
+                            const url = "{{ url_for('play_character', char_id=container.id) }}";
                             window.location.href = url;
                         } else {
                             console.error(response.message);
@@ -932,7 +932,7 @@
                     method: 'post',
                     success: (response) => {
                         if (response.status === 'success') {
-                            window.location.href = "{{ url_for('play_char', char_id=container.id) }}";
+                            window.location.href = "{{ url_for('play_character', char_id=container.id) }}";
                         } else {
                             console.error(response.message);
                             alert(`Error: ${response.message}`);
