--- a/app/templates/play/location.html
+++ b/app/templates/play/location.html
@@ -101,7 +101,7 @@
                     <h2>Characters Here</h2>
                     <ul>
                         {% for char in game_data.characters %}
-                            {% set link = url_for('play_char', char_id=char.id) %}
+                            {% set link = url_for('play_character', char_id=char.id) %}
                             {% set letter = link_letters.next(link) %}
                             <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
                             <span class="hotkey-indicator">{{ letter }}</span>
@@ -324,7 +324,7 @@
                 "{{ char.id }}": {
                     letter: getFirstGrapheme('{{ char.name }}'),
                     title: '{{ char.name }}',
-                    link: "{{ url_for('play_char', char_id=char.id) }}",
+                    link: "{{ url_for('play_character', char_id=char.id) }}",
                     x: "{{ char.position[0] }}",
                     y: "{{ char.position[1] }}"
                 },
